style.css
* {
  margin: 0 !important;
  padding: 0 !important;
  box-sizing: border-box;
}

.logo {
  width: 100px;
}

.navigation-bar {
  color: #000 !important;
}

.text-orange {
  color: orange !important;
}

.section-hero {
  position: relative;
  height: 80vh;
  background-image: linear-gradient(
      to right,
      rgba(0, 0, 0, 0.795),
      rgba(210, 187, 194, 0.027)
    ),
    url(images/hero-bg.jpg);

  background-size: cover;
  background-position: center;
}

.backdrop {
  z-index: 1;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;

  backdrop-filter: blur(5px);
}

span {
  color: orange;
}

.hero-sub-text {
  margin-bottom: 3rem !important;
}

.btn-border-orange {
  border-color: orange !important;
}

.feature-icon-cstm {
  width: 32px;
  height: 32px;
  color: red;
}

.icon-link-color {
  color: orange !important;
}

.product-img {
  width: 18rem;
}

.products-sub-head {
  margin-bottom: 6rem !important;
}

.gdn {
  gap: 2rem !important;
}

.products-shadow {
  padding: 3rem 0 !important;
  box-shadow: 0 0 32px 0px rgba(0, 0, 0, 0.1);
}

@media (max-width: 576px) {
  .hero-sub-text {
    display: none;
  }

  .section-hero {
    height: 55vh;
  }

  .objectives-box {
    flex-direction: column !important;
  }
}

.section-about {
  position: relative;
  height: 50vh;
  background-image: linear-gradient(
      to right,
      rgba(0, 0, 0, 0.795),
      rgba(210, 187, 194, 0.027)
    ),
    url(images/3d-rendering-gas-cylinder.jpg);

  background-size: cover;
  background-position: center;
}

.objectives-img {
  object-fit: cover;
  height: 13rem;
  width: 100%;
}

.featured-product {
  box-shadow: 0 0 32px 0px rgba(0, 0, 0, 0.1);
  width: 30rem;
}

.card {
  border: none !important;
  box-shadow: 0 0 32px 0px rgba(0, 0, 0, 0.1);
}

.card-body {
  border-top: 0.5px solid rgba(128, 128, 128, 0.104);
}

